[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/phoneOwner.gd" type="Script" id=1]
[ext_resource path="res://menus/elianto_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/elianto_32.tres" type="DynamicFont" id=3]

[node name="PhoneOwner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 30.0
margin_right = -40.0
margin_bottom = -30.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VSplitContainer"]
margin_right = 464.0
margin_bottom = 48.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.439216, 0.439216, 1 )
text = "I am playing on:"
align = 1

[node name="Buttons" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 60.0
margin_right = 464.0
margin_bottom = 246.0
custom_constants/separation = 22
alignment = 1

[node name="MyPhone" type="Button" parent="VSplitContainer/Buttons"]
margin_left = 148.0
margin_top = 14.0
margin_right = 315.0
margin_bottom = 52.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
action_mode = 0
enabled_focus_mode = 0
text = "My phone"
flat = true

[node name="Borrow" type="Button" parent="VSplitContainer/Buttons"]
margin_top = 74.0
margin_right = 464.0
margin_bottom = 112.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
enabled_focus_mode = 0
text = "A borrowed phone"
flat = true

[node name="Back" type="Button" parent="VSplitContainer/Buttons"]
margin_left = 188.0
margin_top = 134.0
margin_right = 276.0
margin_bottom = 172.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "Back"

[connection signal="pressed" from="VSplitContainer/Buttons/MyPhone" to="." method="_on_MyPhone_pressed"]
[connection signal="pressed" from="VSplitContainer/Buttons/Borrow" to="." method="_on_Borrow_pressed"]
[connection signal="pressed" from="VSplitContainer/Buttons/Back" to="." method="_on_Back_pressed"]
